--- a/index.html
+++ b/index.html
@@ -8,46 +8,29 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>FilmRec</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <span id="userEmail" class="user-email"></span>
-            <button id="loginBtn" class="login-btn">Login/Sign Up</button>
-        </nav>
+        <h1>FilmRec</h1>
+        <p>Find your favorite movies, showtimes, and locations.</p>
     </header>
-
     <main>
-        <section class="intro" id="introSection">
-            <h2>Welcome to FilmRec</h2>
-            <p>Pick a day, choose your movie, and find the best location to watch it.</p>
-            <button id="chooseDateBtn">Choose a Date</button>
+        <section id="date-selection">
+            <h2>Select a Date</h2>
+            <input type="date" id="movie-date" />
         </section>
-
-        <!-- Date input box -->
-        <section class="date-input-container" id="dateInputContainer">
-            <input type="text" id="dateInput" placeholder="MM/DD" maxlength="5" />
-            <button id="submitDateBtn">Submit</button>
+        <section id="movie-search">
+            <h2>Search for a Movie</h2>
+            <input type="text" id="movie-search-bar" placeholder="Enter movie name..." />
         </section>
-
-        <!-- Movie search bar -->
-        <section class="movie-search-container" id="movieSearchContainer" style="display: none;">
-            <input type="text" id="movieSearchInput" placeholder="Search for a movie..." />
-            <button id="searchMovieBtn">Search</button>
+        <section id="movies">
+            <ul id="movie-list">
+                <!-- Movie list will be populated here -->
+            </ul>
         </section>
-
-        <!-- Container to display the search results -->
-        <section id="movieResults" class="movie-results"></section>
+        <section id="details">
+            <div id="movie-details">
+                <!-- Movie details will be displayed here -->
+            </div>
+        </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 FilmRec. All rights reserved.</p>
-    </footer>
-
     <script src="MoviesRec.js"></script>
 </body>
 </html>
